2004-06-18 Jan Beulich <jbeulich@novell.com>

	* ld-elfvsb/main.c: Ensure visibility_def and visibility_func are
	actually referenced (gcc 3.4 eliminates comparisons of addresses
	of global symbols with NULL).
	* ld-selective/selective.exp: Suppress -fvtable-gc tests for gcc
	3.4.0 and above, as this option and its functionality is no longer
	supported, making these tests fail).

2004-05-18  Nick Clifton  <nickc@redhat.com>

	* ld-elf/frame.s: Replace @ with % so that the file can be
	compiled by an ARM targeted GAS.
	* ld-elf/table.s: Likewise.
	* ld-elf/tbss.s: Likewise.  Also replace .align <foo> with
	.p2align (log2 <foo>) to cope with the fact that the ARM .align
	directive takes a power-of-two argument.

2004-05-17  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-elf/frame.exp: New file. Test read-only .eh_frame and
	.gcc_except_table sections.
	* ld-elf/frame.s: Likewise.
	* ld-elf/table.s: Likewise.
	* ld-elf/tbss.s: Likewise.

2004-05-12  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* ld-sh/tlsbin-2.d: Adjust for section reordering changes
	and removal of unneeded STT_SECTION symbols from .dynsym.
	* ld-sh/tlsbin-3.d: Likewise.
	* ld-sh/tlspic-2.d: Likewise.

2004-05-12  Ben Elliston  <bje@au.ibm.com>

	* ld-sh/sh64/relax.exp: Remove stray semicolons.
	* ld-sh/sh64/relfail.exp: Likewise.
	* lib/ld-lib.exp: Likewise.

2004-05-11  Jakub Jelinek  <jakub@redhat.com>

	* ld-i386/tlspic.rd: Adjust for section reordering changes
	and removal of unneeded STT_SECTION symbols from .dynsym.
	* ld-i386/tlspic.dd: Likewise.
	* ld-i386/tlspic.sd: Likewise.
	* ld-i386/tlsbin.rd: Likewise.
	* ld-i386/tlsbinpic.s: Likewise.
	* ld-i386/tlsbin.dd: Likewise.
	* ld-i386/tlsbin.sd: Likewise.
	* ld-i386/tlsnopic.rd: Likewise.
	* ld-i386/tlsnopic1.s: Likewise.
	* ld-i386/combreloc.d: Likewise.
	* ld-i386/tlsnopic.dd: Likewise.
	* ld-i386/tlsnopic.sd: Likewise.
	* ld-x86-64/tlspic.rd: Likewise.
	* ld-x86-64/tlspic.dd: Likewise.
	* ld-x86-64/tlsbin.dd: Likewise.
	* ld-x86-64/tlspic.sd: Likewise.